--- a/app/src/main/res/layout/activity_second_screen.xml
+++ b/app/src/main/res/layout/activity_second_screen.xml
@@ -75,6 +75,7 @@
         android:layout_marginTop="286dp"
         android:layout_marginEnd="157dp"
         android:layout_marginBottom="399dp"
+        android:text="0"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
