--- a/app/src/main/res/layout/activity_second_screen.xml
+++ b/app/src/main/res/layout/activity_second_screen.xml
@@ -54,13 +54,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/addStudent"
         android:layout_width="54dp"
         android:layout_height="51dp"
         android:layout_marginStart="286dp"
         android:layout_marginTop="286dp"
         android:layout_marginEnd="71dp"
         android:layout_marginBottom="394dp"
+        android:onClick="onClickAddStudent"
         android:text="+"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
