--- a/app/src/main/res/layout/activity_second_screen.xml
+++ b/app/src/main/res/layout/activity_second_screen.xml
@@ -15,8 +15,10 @@
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="345dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="none"
         android:text="Adult Ticket"
+        android:focusable="false"
+        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,8 +33,10 @@
         android:layout_marginEnd="23dp"
         android:layout_marginBottom="457dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="none"
         android:text="Student Ticket"
+        android:focusable="false"
+        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,8 +128,10 @@
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="233dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="none"
         android:text="Senior Ticket"
+        android:focusable="false"
+        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -213,7 +219,9 @@
         android:layout_marginEnd="101dp"
         android:layout_marginBottom="116dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="none"
+        android:focusable="false"
+        android:clickable="false"
         android:text="0"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
