--- a/app/src/main/res/layout/activity_second_screen.xml
+++ b/app/src/main/res/layout/activity_second_screen.xml
@@ -14,11 +14,11 @@
         android:layout_marginTop="344dp"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="345dp"
+        android:clickable="false"
         android:ems="10"
+        android:focusable="false"
         android:inputType="none"
         android:text="Adult Ticket"
-        android:focusable="false"
-        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,11 +32,11 @@
         android:layout_marginTop="232dp"
         android:layout_marginEnd="23dp"
         android:layout_marginBottom="457dp"
+        android:clickable="false"
         android:ems="10"
+        android:focusable="false"
         android:inputType="none"
         android:text="Student Ticket"
-        android:focusable="false"
-        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,11 +127,11 @@
         android:layout_marginTop="456dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="233dp"
+        android:clickable="false"
         android:ems="10"
+        android:focusable="false"
         android:inputType="none"
         android:text="Senior Ticket"
-        android:focusable="false"
-        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -218,12 +218,54 @@
         android:layout_marginTop="570dp"
         android:layout_marginEnd="101dp"
         android:layout_marginBottom="116dp"
-        android:ems="10"
-        android:inputType="none"
-        android:focusable="false"
         android:clickable="false"
+        android:ems="10"
+        android:focusable="false"
+        android:inputType="none"
         android:text="0"
         android:textAlignment="textStart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/studentView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="310dp"
+        android:layout_marginTop="244dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginBottom="468dp"
+        android:text="0.00"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/adultView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="310dp"
+        android:layout_marginTop="356dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginBottom="356dp"
+        android:text="0.00"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/seniorView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="312dp"
+        android:layout_marginTop="468dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="244dp"
+        android:text="0.00"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
