small additional adjustments

--- a/app/src/main/res/layout/activity_second_screen.xml
+++ b/app/src/main/res/layout/activity_second_screen.xml
@@ -18,7 +18,7 @@
         android:ems="10"
         android:focusable="false"
         android:inputType="none"
-        android:text="0"
+        android:text="$ 0.00"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:ems="10"
         android:focusable="false"
         android:inputType="none"
-        android:text="0"
+        android:text="$ 0.00"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -260,7 +260,7 @@
         android:ems="10"
         android:focusable="false"
         android:inputType="none"
-        android:text="0"
+        android:text="$ 0.00"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
