the current state

--- a/app/src/main/res/layout/activity_second_screen.xml
+++ b/app/src/main/res/layout/activity_second_screen.xml
@@ -18,7 +18,7 @@
         android:ems="10"
         android:focusable="false"
         android:inputType="none"
-        android:text="$ 0.00"
+        android:text="@string/zeroDollars"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:ems="10"
         android:focusable="false"
         android:inputType="none"
-        android:text="$ 0.00"
+        android:text="@string/zeroDollars"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
         android:ems="10"
         android:focusable="false"
         android:inputType="none"
-        android:text="Adult Ticket"
+        android:text="@string/adultTicket"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
         android:ems="10"
         android:focusable="false"
         android:inputType="none"
-        android:text="Student Ticket"
+        android:text="@string/studentTicket"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +89,7 @@
         android:layout_marginEnd="283dp"
         android:layout_marginBottom="394dp"
         android:onClick="onClickMinusStudent"
-        android:text="-"
+        android:text="@string/minusSign"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +104,7 @@
         android:layout_marginEnd="71dp"
         android:layout_marginBottom="394dp"
         android:onClick="onClickAddStudent"
-        android:text="+"
+        android:text="@string/plusSign"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +118,7 @@
         android:layout_marginTop="286dp"
         android:layout_marginEnd="157dp"
         android:layout_marginBottom="399dp"
-        android:text="0"
+        android:text="@string/zero"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -134,7 +134,7 @@
         android:layout_marginTop="398dp"
         android:layout_marginEnd="157dp"
         android:layout_marginBottom="287dp"
-        android:text="0"
+        android:text="@string/zero"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -151,7 +151,7 @@
         android:layout_marginEnd="71dp"
         android:layout_marginBottom="282dp"
         android:onClick="onClickAddAdult"
-        android:text="+"
+        android:text="@string/plusSign"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -169,7 +169,7 @@
         android:ems="10"
         android:focusable="false"
         android:inputType="none"
-        android:text="Senior Ticket"
+        android:text="@string/seniorTicket"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -184,7 +184,7 @@
         android:layout_marginEnd="283dp"
         android:layout_marginBottom="168dp"
         android:onClick="onClickMinusSenior"
-        android:text="-"
+        android:text="@string/minusSign"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -198,7 +198,7 @@
         android:layout_marginTop="512dp"
         android:layout_marginEnd="157dp"
         android:layout_marginBottom="173dp"
-        android:text="0"
+        android:text="@string/zero"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -215,7 +215,7 @@
         android:layout_marginEnd="71dp"
         android:layout_marginBottom="168dp"
         android:onClick="onClickAddSenior"
-        android:text="+"
+        android:text="@string/plusSign"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -230,7 +230,7 @@
         android:layout_marginEnd="283dp"
         android:layout_marginBottom="282dp"
         android:onClick="onClickMinusAdult"
-        android:text="-"
+        android:text="@string/minusSign"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -260,7 +260,7 @@
         android:ems="10"
         android:focusable="false"
         android:inputType="none"
-        android:text="$ 0.00"
+        android:text="@string/zeroDollars"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -275,7 +275,7 @@
         android:layout_marginTop="244dp"
         android:layout_marginEnd="43dp"
         android:layout_marginBottom="468dp"
-        android:text="0.00"
+        android:text="@string/doubleZero"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -289,7 +289,7 @@
         android:layout_marginTop="356dp"
         android:layout_marginEnd="43dp"
         android:layout_marginBottom="356dp"
-        android:text="0.00"
+        android:text="@string/doubleZero"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -303,7 +303,7 @@
         android:layout_marginTop="468dp"
         android:layout_marginEnd="41dp"
         android:layout_marginBottom="244dp"
-        android:text="0.00"
+        android:text="@string/doubleZero"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -317,7 +317,7 @@
         android:layout_marginTop="613dp"
         android:layout_marginEnd="321dp"
         android:layout_marginBottom="99dp"
-        android:text="Ticket Price"
+        android:text="@string/ticketPrice"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -331,7 +331,7 @@
         android:layout_marginTop="613dp"
         android:layout_marginEnd="210dp"
         android:layout_marginBottom="99dp"
-        android:text="Sales Tax"
+        android:text="@string/salesTax"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -345,7 +345,7 @@
         android:layout_marginTop="613dp"
         android:layout_marginEnd="58dp"
         android:layout_marginBottom="99dp"
-        android:text="Total Price"
+        android:text="@string/totalPrice"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -359,7 +359,6 @@
         android:layout_marginTop="208dp"
         android:layout_marginEnd="180dp"
         android:layout_marginBottom="507dp"
-        android:text="TextView"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
